public class ExhaustedException extends Exception {
    public ExhaustedException(String message) {
        super(message);
    }
}
