public enum LiquidType {
    COLOGNE, VIOLET_ESSENCE, ROSE_WATER
}
